fix: fix height issue on mobile devices

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -626,7 +626,7 @@ input::placeholder, textarea::placeholder {
 /* Main content  */
 
 .main-content {
-    height: 100vh;
+    height: 100dvh;
     position: relative;
 }
 
